--- a/hw4 - neural nets/competition.ipynb
+++ b/hw4 - neural nets/competition.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "e3c889d6",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "id": "a1e708a9",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "id": "7f6c35c1",
    "metadata": {},
    "outputs": [
@@ -118,52 +118,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1, loss = 1.14429645\n",
-      "Validation score: 0.746269\n",
-      "Iteration 2, loss = 0.57737813\n",
-      "Validation score: 0.848259\n",
-      "Iteration 3, loss = 0.44829519\n",
-      "Validation score: 0.870647\n",
-      "Iteration 4, loss = 0.38144108\n",
-      "Validation score: 0.875622\n",
-      "Iteration 5, loss = 0.33247387\n",
-      "Validation score: 0.890547\n",
-      "Iteration 6, loss = 0.29929271\n",
-      "Validation score: 0.890547\n",
-      "Iteration 7, loss = 0.27481240\n",
-      "Validation score: 0.907960\n",
-      "Iteration 8, loss = 0.25810430\n",
-      "Validation score: 0.910448\n",
-      "Iteration 9, loss = 0.24280882\n",
-      "Validation score: 0.910448\n",
-      "Iteration 10, loss = 0.23241129\n",
-      "Validation score: 0.910448\n"
+      "Iteration 1, loss = 1.54480127\n",
+      "Validation score: 0.415423\n",
+      "Iteration 2, loss = 1.23044286\n",
+      "Validation score: 0.601990\n",
+      "Iteration 3, loss = 1.04113255\n",
+      "Validation score: 0.614428\n",
+      "Iteration 4, loss = 0.92314610\n",
+      "Validation score: 0.636816\n",
+      "Iteration 5, loss = 0.83409740\n",
+      "Validation score: 0.676617\n",
+      "Iteration 6, loss = 0.76003009\n",
+      "Validation score: 0.741294\n",
+      "Iteration 7, loss = 0.69788122\n",
+      "Validation score: 0.763682\n",
+      "Iteration 8, loss = 0.64684719\n",
+      "Validation score: 0.786070\n",
+      "Iteration 9, loss = 0.60552600\n",
+      "Validation score: 0.793532\n",
+      "Iteration 10, loss = 0.57182227\n",
+      "Validation score: 0.803483\n",
+      "Iteration 11, loss = 0.54389376\n",
+      "Validation score: 0.808458\n",
+      "Iteration 12, loss = 0.52030214\n",
+      "Validation score: 0.813433\n",
+      "Iteration 13, loss = 0.50003943\n",
+      "Validation score: 0.818408\n",
+      "Iteration 14, loss = 0.48258220\n",
+      "Validation score: 0.815920\n",
+      "Iteration 15, loss = 0.46682933\n",
+      "Validation score: 0.805970\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\sebas\\one\\OneDrive\\grive\\faks\\masters\\y1\\2nd semester\\ML-DS I\\ML-DS-I\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (10) reached and the optimization hasn't converged yet.\n",
+      "c:\\Users\\sebas\\one\\OneDrive\\grive\\faks\\masters\\y1\\2nd semester\\ML-DS I\\ML-DS-I\\.venv\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (15) reached and the optimization hasn't converged yet.\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-5 {color: black;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MLPClassifier(activation=&#x27;logistic&#x27;, alpha=1e-05, early_stopping=True,\n",
-       "              hidden_layer_sizes=(100, 50, 100), learning_rate=&#x27;adaptive&#x27;,\n",
-       "              max_iter=10, validation_fraction=0.01, verbose=True)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MLPClassifier</label><div class=\"sk-toggleable__content\"><pre>MLPClassifier(activation=&#x27;logistic&#x27;, alpha=1e-05, early_stopping=True,\n",
-       "              hidden_layer_sizes=(100, 50, 100), learning_rate=&#x27;adaptive&#x27;,\n",
-       "              max_iter=10, validation_fraction=0.01, verbose=True)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-6 {color: black;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MLPClassifier(activation=&#x27;logistic&#x27;, alpha=1e-05, early_stopping=True,\n",
+       "              hidden_layer_sizes=(100, 100), learning_rate=&#x27;adaptive&#x27;,\n",
+       "              learning_rate_init=0.0001, max_iter=15, validation_fraction=0.01,\n",
+       "              verbose=True)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MLPClassifier</label><div class=\"sk-toggleable__content\"><pre>MLPClassifier(activation=&#x27;logistic&#x27;, alpha=1e-05, early_stopping=True,\n",
+       "              hidden_layer_sizes=(100, 100), learning_rate=&#x27;adaptive&#x27;,\n",
+       "              learning_rate_init=0.0001, max_iter=15, validation_fraction=0.01,\n",
+       "              verbose=True)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "MLPClassifier(activation='logistic', alpha=1e-05, early_stopping=True,\n",
-       "              hidden_layer_sizes=(100, 50, 100), learning_rate='adaptive',\n",
-       "              max_iter=10, validation_fraction=0.01, verbose=True)"
+       "              hidden_layer_sizes=(100, 100), learning_rate='adaptive',\n",
+       "              learning_rate_init=0.0001, max_iter=15, validation_fraction=0.01,\n",
+       "              verbose=True)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "id": "d8a01013",
    "metadata": {},
    "outputs": [],
@@ -187,29 +200,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "id": "ebeb7973",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
-       "        1.9797349e-02, 4.8966554e-05],\n",
-       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
-       "        1.9797349e-02, 4.8966554e-05],\n",
-       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
-       "        1.9797349e-02, 4.8966554e-05],\n",
+       "array([[0.02011167, 0.26238337, 0.09684309, 0.07489569, 0.54263365,\n",
+       "        0.00313244],\n",
+       "       [0.02011167, 0.26238337, 0.09684309, 0.07489569, 0.54263365,\n",
+       "        0.00313244],\n",
+       "       [0.02011167, 0.26238337, 0.09684309, 0.07489569, 0.54263365,\n",
+       "        0.00313244],\n",
        "       ...,\n",
-       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
-       "        1.9797349e-02, 4.8966554e-05],\n",
-       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
-       "        1.9797349e-02, 4.8966554e-05],\n",
-       "       [7.9119861e-02, 2.3109853e-02, 6.8142825e-01, 1.9649565e-01,\n",
-       "        1.9797349e-02, 4.8966554e-05]], dtype=float32)"
+       "       [0.02011167, 0.26238337, 0.09684309, 0.07489569, 0.54263365,\n",
+       "        0.00313244],\n",
+       "       [0.02011167, 0.26238337, 0.09684309, 0.07489569, 0.54263365,\n",
+       "        0.00313244],\n",
+       "       [0.02011167, 0.26238337, 0.09684309, 0.07489569, 0.54263365,\n",
+       "        0.00313244]], dtype=float32)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "id": "5b255b58",
    "metadata": {},
    "outputs": [],
@@ -230,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "id": "fd49e0c3",
    "metadata": {},
    "outputs": [
@@ -240,7 +253,7 @@
        "(200, 300, 6)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "id": "9fcc7751",
    "metadata": {},
    "outputs": [],
