--- a/hw4 - neural nets/visualize.ipynb
+++ b/hw4 - neural nets/visualize.ipynb
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 285,
    "id": "c2788256",
    "metadata": {},
    "outputs": [
@@ -379,22 +379,39 @@
      "output_type": "stream",
      "text": [
       "0 0\n",
-      "(3,) (6,) (3,) (3,)\n",
-      "[[ 0.005071   -0.00759739  0.00033059]] [-0.00454184 -0.00239888  0.00082845]\n",
-      "-0.0953119389904085\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "shapes (6,) and (3,) not aligned: 6 (dim 0) != 3 (dim 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[275], line 24\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(b, tb)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(cosine_similarity(b, tb))\n\u001b[1;32m---> 24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mcosine_similarity\u001b[49m\u001b[43m(\u001b[49m\u001b[43mw\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtw\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[275], line 4\u001b[0m, in \u001b[0;36mcosine_similarity\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m      2\u001b[0m a_flat \u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[0;32m      3\u001b[0m b_flat \u001b[38;5;241m=\u001b[39m b\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[1;32m----> 4\u001b[0m dot \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma_flat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb_flat\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m norm_a \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(a_flat)\n\u001b[0;32m      6\u001b[0m norm_b \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(b_flat)\n",
-      "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: shapes (6,) and (3,) not aligned: 6 (dim 0) != 3 (dim 0)"
+      "(1, 3) (2, 3) (3,) (2, 3)\n",
+      "Bias 0: -0.3216116266903385\n",
+      "Weight 0: -0.3500276482601311\n",
+      "[[ 0.00503054 -0.00750385  0.00034198]] [0.00017163 0.00029324 0.00026198]\n",
+      "[[ 0.00261814 -0.00387746  0.0001825 ]\n",
+      " [ 0.00259226 -0.00381344  0.00017662]]\n",
+      "[[1.02358914e-04 1.66793514e-04 9.57096709e-05]\n",
+      " [8.86608177e-05 1.73494613e-04 1.58515875e-04]]\n",
+      "\n",
+      "1 2\n",
+      "(1, 3) (3, 3) (3,) (3, 3)\n",
+      "Bias 1: -0.44232591526344006\n",
+      "Weight 1: -0.419437458153758\n",
+      "[[0.02645772 0.06666063 0.01113699]] [ 0.00015378 -0.00158818  0.00192759]\n",
+      "[[0.02248392 0.05665503 0.0094642 ]\n",
+      " [0.01862096 0.04691384 0.00783824]\n",
+      " [0.0201126  0.05067651 0.00846612]]\n",
+      "[[ 5.39079920e-05 -5.56796615e-04  6.80216763e-04]\n",
+      " [ 1.00579324e-04 -1.03880395e-03  1.25777710e-03]\n",
+      " [ 9.17152938e-05 -9.47224093e-04  1.15511427e-03]]\n",
+      "\n",
+      "2 4\n",
+      "(1, 2) (3, 2) (2,) (3, 2)\n",
+      "Bias 2: 0.9999999714984804\n",
+      "Weight 2: 0.9486743747489745\n",
+      "[[-0.30367652  0.30367652]] [-0.02381806  0.02381806]\n",
+      "[[-0.1349153   0.1349153 ]\n",
+      " [-0.25592585  0.25592585]\n",
+      " [-0.20274565  0.20274565]]\n",
+      "[[-0.01221707  0.01221706]\n",
+      " [-0.01133286  0.01133287]\n",
+      " [-0.01744772  0.01744772]]\n",
+      "\n"
      ]
     }
    ],
@@ -412,18 +429,21 @@
     "# Compare torch and ann grads\n",
     "for i in range(3):\n",
     "    b, w = get_layer_names(i)\n",
-    "    torch_b, torch_w = f\"torch_layer{i*2}_biases_grad.npy\", f\"torch_layer{i*2}_biases_grad.npy\"\n",
+    "    torch_b, torch_w = f\"torch_layer{i*2}_biases_grad.npy\", f\"torch_layer{i*2}_weights_grad.npy\"\n",
     "    print(i, i*2)\n",
     "    b,w = np.load(b[0]), np.load(w[0])\n",
-    "    tb, tw = np.load(torch_b), np.load(torch_w)\n",
+    "    tb, tw = np.load(torch_b), np.load(torch_w).T\n",
     "    \n",
     "    print(b.shape, w.shape, tb.shape, tw.shape)\n",
     "    \n",
     "    \n",
-    "    print(cosine_similarity(b, tb))\n",
-    "    print(cosine_similarity(w, tw))\n",
+    "    print(f\"Bias {i}:\", cosine_similarity(b, tb))\n",
+    "    print(f\"Weight {i}:\", cosine_similarity(w, tw))\n",
     "\n",
-    "\n",
+    "    print(b, tb)\n",
+    "    print(w)\n",
+    "    print(tw)\n",
+    "    print()\n",
     "    "
    ]
   },
